# foo_metadata_enhancer

./: .gitignore  CMakeLists.txt  README.md  foo_ai_metadata.rc  foo_metadata_enhancer.rc
core/: ai_core.cpp  ai_core.h  cache_layer.cpp  cache_layer.h  logger.cpp  logger.h  task_queue.cpp  task_queue.h  worker_manager.cpp  worker_manager.h
docs/: USER_GUIDE.md  foobar2000 AI Metadata 插件PRDV8.md
include/: backup_manager.h  constants.h  types.h
plugin/: backup_manager.cpp  confirm_dialog.cpp  dialogs.cpp  dialogs.h  main.cpp  main.h  menu_handler.cpp  menu_handler.h  preferences_page.cpp  preferences_page.h  resource.h
tools/: pack.ps1
worker/: abort_checker.py  ai_worker.py  config.yaml.template
worker/ai/: __init__.py  adapter.py  ai_data_source.py
worker/ai/providers/: __init__.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openrouter_provider.py  zhipu_provider.py
worker/common/: __init__.py  config_manager.py  models.py  result_formatter.py  text_utils.py
worker/core/: __init__.py  aggregator.py  resolver.py  stage1_processor.py  stage2_processor.py
worker/data_sources/: __init__.py  base.py  discogs_adapter.py  manager.py  match_decision.py  musicbrainz_adapter.py
worker/fallback/: __init__.py  ai_inferencer.py  controller.py  query_rewriter.py
worker/prompts/: __init__.py  base.py  fallback_prompts.py  stage1_prompts.py  stage2_prompts.py
